@@ -656,11 +656,13 @@ capture_generic (CameraCaptureType type, const char __unused__ *name, int downlo
 		else
 			pathsep = "/";
 
-		if (gp_params.flags & FLAGS_QUIET)
-			printf ("%s%s%s\n", path.folder, pathsep, path.name);
-		else
+		if (gp_params.flags & FLAGS_QUIET) {
+			if (!(gp_params.flags & (FLAGS_STDOUT|FLAGS_STDOUT_SIZE)))
+				printf ("%s%s%s\n", path.folder, pathsep, path.name);
+		} else {
 			printf (_("New file is in location %s%s%s on the camera\n"),
 				path.folder, pathsep, path.name);
+		}
 
 		if (download) {
 			if (strcmp(path.folder, last.folder)) {
