@@ -1,3 +1,8 @@
+2009-04-07  Marcus Meissner  <marcus@jet.franken.de>
+
+	* main.c, gp-params.c: Make --quiet disable the progress bar too,
+	  and reduce --stdout --quiet capture output.
+
 2008-08-28  Marcus Meissner  <marcus@jet.franken.de>
 
 	* gphoto2/main.c: Allow to specify a camera by port.
